Deprecated "class.newInstance()" replaced